Преимущества комплекса section finished

--- a/public/number.html
+++ b/public/number.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="./fonts/ReformaGrotesk/stylesheet.css">
   <!-- Fonst: Montserrat -->
   <link rel="stylesheet" href="./fonts/Monserat/stylesheet.css">
+  <!-- Fonst: Muller -->
+  <link rel="stylesheet" href="./fonts/Muller/stylesheet.css">
   <!-- swiper css link -->
   <link rel="stylesheet" href="../src/css/swiper-bundle.min.css">
   <link rel="stylesheet" href="./css/tailwind.css">
@@ -76,10 +78,67 @@
         </div>
       </section>
 
+      <!-- complex -->
+      <section class="complex">
+        <div class="container">
+          <h1 class="title">Преимущества комплекса</h1>
+
+          <div class="mt-[51px] flex flex-col gap-10">
+            <div class="flex items-center justify-between gap-[102px]">
+              <img src="./assets/images/product-img-1.png" alt="product img">
+              <div class="max-w-[515px] flex flex-col gap-6">
+                <div
+                  class="text-[54px] leading-[55.73px] text-light-brown font-medium font-ReformaGroteskLight uppercase">
+                  01
+                  —</div>
+                <div class="text-2xl leading-6 text-light-brown font-normal font-Muller uppercase">Заголовок
+                  преимущества
+                </div>
+                <p class="desc">
+                  Сложно придумать более идеальную локацию для гостиничного комплекса у резидентов Корсакова будет
+                  соблюдён баланс всех сфер жизни как на территории отеля, так и за его пределами.
+                </p>
+              </div>
+            </div>
+            <div class="flex items-center justify-between gap-[102px]">
+              <div class="max-w-[515px] flex flex-col gap-6">
+                <div
+                  class="text-[54px] leading-[55.73px] text-light-brown font-medium font-ReformaGroteskLight uppercase">
+                  02 —</div>
+                <div class="text-2xl leading-6 text-light-brown font-normal font-Muller uppercase">Заголовок
+                  преимущества
+                </div>
+                <p class="desc">
+                  Сложно придумать более идеальную локацию для гостиничного комплекса у резидентов Корсакова будет
+                  соблюдён баланс всех сфер жизни как на территории отеля, так и за его пределами.
+                </p>
+              </div>
+              <img src="./assets/images/product-img-2.png" alt="product img">
+            </div>
+            <div class="flex items-center justify-between gap-[102px]">
+              <img src="./assets/images/product-img-3.png" alt="product img">
+              <div class="max-w-[515px] flex flex-col gap-6">
+                <div
+                  class="text-[54px] leading-[55.73px] text-light-brown font-medium font-ReformaGroteskLight uppercase">
+                  03
+                  —</div>
+                <div class="text-2xl leading-6 text-light-brown font-normal font-Muller uppercase">Заголовок
+                  преимущества
+                </div>
+                <p class="desc">
+                  Сложно придумать более идеальную локацию для гостиничного комплекса у резидентов Корсакова будет
+                  соблюдён баланс всех сфер жизни как на территории отеля, так и за его пределами.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
     </main>
 
     <!-- footer -->
-    <footer class="bg-light-brown pt-[73px] pb-[61px]" id="footer">
+    <footer class="bg-light-brown pt-[73px] pb-[61px] mt-[120px]" id="footer">
       <div class="container flex items-start justify-between gap-[99px]">
         <a href="#!">
           <img src="./assets/images/logo/compant-logo-black.png" alt="company-logo" width="261" height="63">
