similar-numbers section finished

--- a/public/number.html
+++ b/public/number.html
@@ -78,6 +78,226 @@
         </div>
       </section>
 
+      <!-- similar-numbers -->
+      <section class="similar-numbers mb-[120px]">
+        <div class="container flex justify-between items-end">
+          <h1 class="title">Похожие номера</h1>
+
+          <div class="btns flex gap-[53px]">
+            <button class="prev-btn-two">
+              <img src="./assets/images/icons/prev-arrow.svg" alt="prev-arrow">
+            </button>
+            <button class="next-btn-two">
+              <img src="./assets/images/icons/next-arrow.svg" alt="next-arrow">
+            </button>
+          </div>
+        </div>
+        <div class="swiper similar-numbers__swiper mt-[42px]">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide space-y-9 border-r border-t border-b border-[#B9998469] pl-8 pr-6 py-6">
+              <div class="flex items-center justify-between text-light-brown">
+                <span class="text-base leading-6 font-Muller font-normal">1-к квартира</span>
+                <span class="text-base leading-6 font-Muller font-normal">4.805 млн</span>
+              </div>
+              <div class="bg-white py-[22px] px-[10px] h-[278px]">
+                <img class="h-full w-full" src="./assets/images/proect-1.png" alt="prodject img">
+              </div>
+              <div class="flex items-stretch justify-between gap-6">
+                <div class="text-light-brown">
+                  <span class="text-xs leading-6 font-light">Площадь</span>
+                  <div class="text-sm leading-6 font-medium ">42.5 м2</div>
+                </div>
+                <div class=" w-[1px] bg-[#ADA4A04D] block"></div>
+                <div class="text-light-brown">
+                  <span class="text-xs leading-6 font-light">Корпус</span>
+                  <div class="text-sm leading-6 font-medium ">2</div>
+                </div>
+                <div class=" w-[1px] bg-[#ADA4A04D] block"></div>
+                <div class="text-light-brown">
+                  <span class="text-xs leading-6 font-light">Подъезд / этаж</span>
+                  <div class="text-sm leading-6 font-medium ">3 / 5</div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide space-y-9 border-r border-t border-b border-[#B9998469] pl-8 pr-6 py-6">
+              <div class="flex items-center justify-between text-light-brown">
+                <span class="text-base leading-6 font-Muller font-normal">1-к квартира</span>
+                <span class="text-base leading-6 font-Muller font-normal">4.805 млн</span>
+              </div>
+              <div class="bg-white py-[22px] px-[10px] h-[278px]">
+                <img class="h-full w-full" src="./assets/images/proect-1.png" alt="prodject img">
+              </div>
+              <div class="flex items-stretch justify-between gap-6">
+                <div class="text-light-brown">
+                  <span class="text-xs leading-6 font-light">Площадь</span>
+                  <div class="text-sm leading-6 font-medium ">42.5 м2</div>
+                </div>
+                <div class=" w-[1px] bg-[#ADA4A04D] block"></div>
+                <div class="text-light-brown">
+                  <span class="text-xs leading-6 font-light">Корпус</span>
+                  <div class="text-sm leading-6 font-medium ">2</div>
+                </div>
+                <div class=" w-[1px] bg-[#ADA4A04D] block"></div>
+                <div class="text-light-brown">
+                  <span class="text-xs leading-6 font-light">Подъезд / этаж</span>
+                  <div class="text-sm leading-6 font-medium ">3 / 5</div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide space-y-9 border-r border-t border-b border-[#B9998469] pl-8 pr-6 py-6">
+              <div class="flex items-center justify-between text-light-brown">
+                <span class="text-base leading-6 font-Muller font-normal">1-к квартира</span>
+                <span class="text-base leading-6 font-Muller font-normal">4.805 млн</span>
+              </div>
+              <div class="bg-white py-[22px] px-[10px] h-[278px]">
+                <img class="h-full w-full" src="./assets/images/proect-1.png" alt="prodject img">
+              </div>
+              <div class="flex items-stretch justify-between gap-6">
+                <div class="text-light-brown">
+                  <span class="text-xs leading-6 font-light">Площадь</span>
+                  <div class="text-sm leading-6 font-medium ">42.5 м2</div>
+                </div>
+                <div class=" w-[1px] bg-[#ADA4A04D] block"></div>
+                <div class="text-light-brown">
+                  <span class="text-xs leading-6 font-light">Корпус</span>
+                  <div class="text-sm leading-6 font-medium ">2</div>
+                </div>
+                <div class=" w-[1px] bg-[#ADA4A04D] block"></div>
+                <div class="text-light-brown">
+                  <span class="text-xs leading-6 font-light">Подъезд / этаж</span>
+                  <div class="text-sm leading-6 font-medium ">3 / 5</div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide space-y-9 pl-8 pr-6 py-6 border-r border-t border-b border-[#B9998469]">
+              <div class="flex items-center justify-between text-light-brown">
+                <span class="text-base leading-6 font-Muller font-normal">1-к квартира</span>
+                <span class="text-base leading-6 font-Muller font-normal">4.805 млн</span>
+              </div>
+              <div class="bg-white py-[22px] px-[10px] text-center h-[278px]">
+                <img class="h-full w-full" src="./assets/images/proect-1.png" alt="prodject img">
+              </div>
+              <div class="flex items-stretch justify-between gap-6">
+                <div class="text-light-brown">
+                  <span class="text-xs leading-6 font-light">Площадь</span>
+                  <div class="text-sm leading-6 font-medium ">42.5 м2</div>
+                </div>
+                <div class=" w-[1px] bg-[#ADA4A04D] block"></div>
+                <div class="text-light-brown">
+                  <span class="text-xs leading-6 font-light">Корпус</span>
+                  <div class="text-sm leading-6 font-medium ">2</div>
+                </div>
+                <div class=" w-[1px] bg-[#ADA4A04D] block"></div>
+                <div class="text-light-brown">
+                  <span class="text-xs leading-6 font-light">Подъезд / этаж</span>
+                  <div class="text-sm leading-6 font-medium ">3 / 5</div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide space-y-9 border-r border-t border-b border-[#B9998469] pl-8 pr-6 py-6">
+              <div class="flex items-center justify-between text-light-brown">
+                <span class="text-base leading-6 font-Muller font-normal">1-к квартира</span>
+                <span class="text-base leading-6 font-Muller font-normal">4.805 млн</span>
+              </div>
+              <div class="bg-white py-[22px] px-[10px] h-[278px]">
+                <img class="h-full w-full" src="./assets/images/proect-1.png" alt="prodject img">
+              </div>
+              <div class="flex items-stretch justify-between gap-6">
+                <div class="text-light-brown">
+                  <span class="text-xs leading-6 font-light">Площадь</span>
+                  <div class="text-sm leading-6 font-medium ">42.5 м2</div>
+                </div>
+                <div class=" w-[1px] bg-[#ADA4A04D] block"></div>
+                <div class="text-light-brown">
+                  <span class="text-xs leading-6 font-light">Корпус</span>
+                  <div class="text-sm leading-6 font-medium ">2</div>
+                </div>
+                <div class=" w-[1px] bg-[#ADA4A04D] block"></div>
+                <div class="text-light-brown">
+                  <span class="text-xs leading-6 font-light">Подъезд / этаж</span>
+                  <div class="text-sm leading-6 font-medium ">3 / 5</div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide space-y-9 border-r border-t border-b border-[#B9998469] pl-8 pr-6 py-6">
+              <div class="flex items-center justify-between text-light-brown">
+                <span class="text-base leading-6 font-Muller font-normal">1-к квартира</span>
+                <span class="text-base leading-6 font-Muller font-normal">4.805 млн</span>
+              </div>
+              <div class="bg-white py-[22px] px-[10px] h-[278px]">
+                <img class="h-full w-full" src="./assets/images/proect-1.png" alt="prodject img">
+              </div>
+              <div class="flex items-stretch justify-between gap-6">
+                <div class="text-light-brown">
+                  <span class="text-xs leading-6 font-light">Площадь</span>
+                  <div class="text-sm leading-6 font-medium ">42.5 м2</div>
+                </div>
+                <div class=" w-[1px] bg-[#ADA4A04D] block"></div>
+                <div class="text-light-brown">
+                  <span class="text-xs leading-6 font-light">Корпус</span>
+                  <div class="text-sm leading-6 font-medium ">2</div>
+                </div>
+                <div class=" w-[1px] bg-[#ADA4A04D] block"></div>
+                <div class="text-light-brown">
+                  <span class="text-xs leading-6 font-light">Подъезд / этаж</span>
+                  <div class="text-sm leading-6 font-medium ">3 / 5</div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide space-y-9 border-r border-t border-b border-[#B9998469] pl-8 pr-6 py-6">
+              <div class="flex items-center justify-between text-light-brown">
+                <span class="text-base leading-6 font-Muller font-normal">1-к квартира</span>
+                <span class="text-base leading-6 font-Muller font-normal">4.805 млн</span>
+              </div>
+              <div class="bg-white py-[22px] px-[10px] h-[278px]">
+                <img class="h-full w-full" src="./assets/images/proect-1.png" alt="prodject img">
+              </div>
+              <div class="flex items-stretch justify-between gap-6">
+                <div class="text-light-brown">
+                  <span class="text-xs leading-6 font-light">Площадь</span>
+                  <div class="text-sm leading-6 font-medium ">42.5 м2</div>
+                </div>
+                <div class=" w-[1px] bg-[#ADA4A04D] block"></div>
+                <div class="text-light-brown">
+                  <span class="text-xs leading-6 font-light">Корпус</span>
+                  <div class="text-sm leading-6 font-medium ">2</div>
+                </div>
+                <div class=" w-[1px] bg-[#ADA4A04D] block"></div>
+                <div class="text-light-brown">
+                  <span class="text-xs leading-6 font-light">Подъезд / этаж</span>
+                  <div class="text-sm leading-6 font-medium ">3 / 5</div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide space-y-9 pl-8 pr-6 py-6 border-r border-t border-b border-[#B9998469]">
+              <div class="flex items-center justify-between text-light-brown">
+                <span class="text-base leading-6 font-Muller font-normal">1-к квартира</span>
+                <span class="text-base leading-6 font-Muller font-normal">4.805 млн</span>
+              </div>
+              <div class="bg-white py-[22px] px-[10px] text-center h-[278px]">
+                <img class="h-full w-full" src="./assets/images/proect-1.png" alt="prodject img">
+              </div>
+              <div class="flex items-stretch justify-between gap-6">
+                <div class="text-light-brown">
+                  <span class="text-xs leading-6 font-light">Площадь</span>
+                  <div class="text-sm leading-6 font-medium ">42.5 м2</div>
+                </div>
+                <div class=" w-[1px] bg-[#ADA4A04D] block"></div>
+                <div class="text-light-brown">
+                  <span class="text-xs leading-6 font-light">Корпус</span>
+                  <div class="text-sm leading-6 font-medium ">2</div>
+                </div>
+                <div class=" w-[1px] bg-[#ADA4A04D] block"></div>
+                <div class="text-light-brown">
+                  <span class="text-xs leading-6 font-light">Подъезд / этаж</span>
+                  <div class="text-sm leading-6 font-medium ">3 / 5</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!-- complex -->
       <section class="complex">
         <div class="container">
