transaktion page finished

--- a/public/number.html
+++ b/public/number.html
@@ -38,6 +38,72 @@
     <!-- main -->
     <main id="main">
 
+      <!-- breadcrumb -->
+      <div class="breadcrumb container">
+        <ul>
+          <li>
+            <a href="#!">Главная</a>
+          </li>
+          <img src="./assets/images/icons/next-icon.svg" alt="next icon">
+          <li>
+            Выбор номера
+          </li>
+        </ul>
+      </div>
+
+      <!-- single-room -->
+      <section class="single-room">
+        <div class="container flex items-end justify-between pb-7">
+          <h1 class="title-lg">Однокомнатный номер</h1>
+          <h3 class="title-xs">4.805 млн</h3>
+        </div>
+        <div class="border-t border-b border-border-color">
+          <div class="container flex items-stretch gap-[52px]">
+            <div class="border-r pt-9 pb-[60px] pr-[102px] border-border-color space-y-[52px]">
+              <div class="flex gap-3">
+                <a class="outline-btn" href="#!">Планировка</a>
+                <a class="outline-btn" href="#!">На этаже</a>
+              </div>
+              <div class="bg-white w-[565px] h-[584px] flex items-center justify-center">
+                <img src="./assets/images/singl-room-project.png" alt="singl-room-project">
+              </div>
+            </div>
+            <div class="pt-9 w-full">
+              <div class="max-w-[310px] mr-auto">
+                <div class="flex items-stretch gap-6">
+                  <div class="text-light-brown">
+                    <span class="text-xs leading-6 font-light">Площадь</span>
+                    <div class="text-sm leading-6 font-medium ">42.5 м2</div>
+                  </div>
+                  <div class=" w-[1px] bg-[#ADA4A04D] block"></div>
+                  <div class="text-light-brown">
+                    <span class="text-xs leading-6 font-light">Корпус</span>
+                    <div class="text-sm leading-6 font-medium ">2</div>
+                  </div>
+                  <div class=" w-[1px] bg-[#ADA4A04D] block"></div>
+                  <div class="text-light-brown">
+                    <span class="text-xs leading-6 font-light">Подъезд / этаж</span>
+                    <div class="text-sm leading-6 font-medium ">3 / 5</div>
+                  </div>
+                </div>
+                <p
+                  class="font-Muller leading-[22px] tracking-[0.03em ] text-light-brown font-normal pt-[26px] pb-[18px]">
+                  Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться
+                </p>
+              </div>
+              <div class="pt-[18px] px-[22px] flex justify-between items-center w-full">
+                <div>
+                  <div>Ипотека от 35.000 руб/мес</div>
+                <span>22 предложения</span>
+                </div>
+                <a href="#!" class="btn">Рассчитать</a>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </section>
+
       <!-- interyer nomer -->
       <section class="interyer-nomer pt-[110px] pb-[120px]">
         <div class="container">
@@ -78,8 +144,64 @@
         </div>
       </section>
 
+      <!-- payment-methods -->
+      <section class="payment-methods">
+        <div class="container">
+          <h1 class="title">способы оплаты</h1>
+          <div class="flex items-stretch justify-between mt-[60px] border-t border-[#ECCCB373]">
+            <div class="border-r border-[#ECCCB373] pt-6 pr-7 pb-2">
+              <div class="w-[52px] h-[52px] rounded-full flex items-center justify-center bg-light-brown">
+                <img src="./assets/images/icons/procent.svg" alt="procent icon">
+              </div>
+              <h3
+                class="font-ReformaGroteskLight text-[32px] leading-[33px] font-medium text-light-brown pt-6 pb-3 uppercase">
+                Ипотека</h3>
+              <p class="leading-[18px] text-[13px] font-light max-w-[270px] text-light-white">
+                Наш ипотечный брокер поможет оформить ипотеку на выгодных условиях и быстро подберет для
+                Вас индивидуальное предложение.
+              </p>
+            </div>
+            <div class="border-r border-[#ECCCB373] pt-6 pr-7 pb-2 pl-[26px]">
+              <div class="w-[52px] h-[52px] rounded-full flex items-center justify-center bg-light-brown">
+              </div>
+              <h3
+                class="font-ReformaGroteskLight text-[32px] leading-[33px] font-medium text-light-brown pt-6 pb-3 uppercase">
+                рассрочка</h3>
+              <p class="leading-[18px] text-[13px] font-light max-w-[270px] text-light-white">
+                Собственное жилье в рассрочку
+                с комфортными платежами
+                в выбранные вами периоды
+                без переплат.
+              </p>
+            </div>
+            <div class="border-r border-[#ECCCB373] pt-6 pr-7 pb-2 pl-[26px]">
+              <div class="w-[52px] h-[52px] rounded-full flex items-center justify-center bg-light-brown">
+              </div>
+              <h3
+                class="font-ReformaGroteskLight text-[32px] leading-[33px] font-medium text-light-brown pt-6 pb-3 uppercase">
+                маткапитал</h3>
+              <p class="leading-[18px] text-[13px] font-light max-w-[270px] text-light-white">
+                Возможности использования материнского капитала в качестве первоначального взноса.
+              </p>
+            </div>
+            <div class="border-r border-[#ECCCB373] pt-6 pr-7 pb-2 pl-[26px]">
+              <div class="w-[52px] h-[52px] rounded-full flex items-center justify-center bg-light-brown">
+                <img src="./assets/images/icons/star.svg" alt="star icon">
+              </div>
+              <h3
+                class="font-ReformaGroteskLight text-[32px] leading-[33px] font-medium text-light-brown pt-6 pb-3 uppercase">
+                военная ипотека</h3>
+              <p class="leading-[18px] text-[13px] font-light max-w-[270px] text-light-white">
+                Специально для военнослужащих
+                и их семей мы предлагаем военную ипотеку с льготными условиями.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!-- similar-numbers -->
-      <section class="similar-numbers mb-[120px]">
+      <section class="similar-numbers my-[120px]">
         <div class="container flex justify-between items-end">
           <h1 class="title">Похожие номера</h1>
 
