range slider 40% finished

--- a/public/number.html
+++ b/public/number.html
@@ -52,7 +52,7 @@
       </div>
 
       <!-- single-room -->
-      <section class="single-room">
+      <section class="single-room text-light-brown">
         <div class="container flex items-end justify-between pb-7">
           <h1 class="title-lg">Однокомнатный номер</h1>
           <h3 class="title-xs">4.805 млн</h3>
@@ -87,16 +87,61 @@
                   </div>
                 </div>
                 <p
-                  class="font-Muller leading-[22px] tracking-[0.03em ] text-light-brown font-normal pt-[26px] pb-[18px]">
+                  class="font-Mullerr leading-[22px] tracking-[0.03em ] text-light-brown font-normal pt-[26px] pb-[18px]">
                   Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться
                 </p>
               </div>
-              <div class="pt-[18px] px-[22px] flex justify-between items-center w-full">
+              <div
+                class="py-[18px] px-[22px] bg-light-brown text-graphite-gray flex justify-between items-center w-full">
                 <div>
-                  <div>Ипотека от 35.000 руб/мес</div>
-                <span>22 предложения</span>
+                  <div class="font-medium text-base leading-6">Ипотека от 35.000 руб/мес</div>
+                  <span class="font-light text-[13px] leading-[18px]">22 предложения</span>
                 </div>
-                <a href="#!" class="btn">Рассчитать</a>
+                <a href="#!" class="gray-btn">Рассчитать</a>
+              </div>
+              <div class="flex gap-5 mt-[30px] mb-[43px]">
+                <a class="brown-btn" href="#!">Забронировать</a>
+                <a class="outline-btn" href="#!">заказать консультацию</a>
+              </div>
+              <div class="mb-[52px]">
+                <h4 class="text-xl leading-[20px] font-MullerLight font-normal">Стоимость</h4>
+                <div class="text-light-brown mt-5 space-y-8">
+                  <div class="flex items-center gap-1">
+                    <span class="font-Mullerr leading-4 text-base whitespace-nowrap">Стоимость</span>
+                    <div class="w-full h-[1px] border-dashed border-[0.3px] border-light-brown mt-[3px]"></div>
+                    <span class="font-Mullerr leading-4 text-base whitespace-nowrap">4.805 млн</span>
+                  </div>
+                  <div class="flex items-center gap-1">
+                    <span class="font-Mullerr leading-4 text-base whitespace-nowrap">Цена за м²</span>
+                    <div class="w-full h-[1px] border-dashed border-[0.3px] border-light-brown mt-[3px]"></div>
+                    <span class="font-Mullerr leading-4 text-base whitespace-nowrap">113.000 руб</span>
+                  </div>
+                  <div class="flex items-center gap-1">
+                    <span class="font-Mullerr leading-4 text-base whitespace-nowrap">Ипотека</span>
+                    <div class="w-full h-[1px] border-dashed border-[0.3px] border-light-brown mt-[3px]"></div>
+                    <span class="font-Mullerr leading-4 text-base whitespace-nowrap">от 35.000 руб/мес</span>
+                  </div>
+                </div>
+              </div>
+              <div class="mb-[52px]">
+                <h4 class="text-xl leading-[20px] font-MullerLight font-normal">Характеристики</h4>
+                <div class="text-light-brown mt-5 space-y-8">
+                  <div class="flex items-center gap-1">
+                    <span class="font-Mullerr leading-4 text-base whitespace-nowrap">Стоимость</span>
+                    <div class="w-full h-[1px] border-dashed border-[0.3px] border-light-brown mt-[3px]"></div>
+                    <span class="font-Mullerr leading-4 text-base whitespace-nowrap">4.805 млн</span>
+                  </div>
+                  <div class="flex items-center gap-1">
+                    <span class="font-Mullerr leading-4 text-base whitespace-nowrap">Цена за м²</span>
+                    <div class="w-full h-[1px] border-dashed border-[0.3px] border-light-brown mt-[3px]"></div>
+                    <span class="font-Mullerr leading-4 text-base whitespace-nowrap">113.000 руб</span>
+                  </div>
+                  <div class="flex items-center gap-1">
+                    <span class="font-Mullerr leading-4 text-base whitespace-nowrap">Ипотека</span>
+                    <div class="w-full h-[1px] border-dashed border-[0.3px] border-light-brown mt-[3px]"></div>
+                    <span class="font-Mullerr leading-4 text-base whitespace-nowrap">от 35.000 руб/мес</span>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -197,6 +242,22 @@
               </p>
             </div>
           </div>
+        </div>
+      </section>
+
+      <!-- mortgage calculator -->
+      <section class="mortgage-calculator bg-light-brown pt-[58px] pb-[76px]">
+        <div class="container">
+          <h3 class="title-xl">калькулятор ипотеки</h3>
+          <div class="mt-[33px] flex items-center justify-between gap-[53px] text-gray">
+            <div>
+              <span class="text-sm leading-[18px] font-light font-Mullerr block">Стоимость недвижимости</span>
+              <span class="text-[32px] leading-[33px] font-medium block font-ReformaGroteskMedium mt-[15px] mb-3">4.500.000
+                руб.</span>
+
+            </div>
+          </div>
+
         </div>
       </section>
 
@@ -419,6 +480,8 @@
           </div>
         </div>
       </section>
+
+
 
       <!-- complex -->
       <section class="complex">
